--- a/days/day_1.html
+++ b/days/day_1.html
@@ -86,7 +86,7 @@
             </tr>
          </table>
          <p>¡vamos Valeria!</p>
-         <img src="../../fotos/foto_dia_1.png" onmousedown="playSound('annoying_peter.mp3')">
+         <img src="../../photos/photo_dia_1.png" onmousedown="playSound('annoying_peter.mp3')">
          <script type="text/javascript" src="../../audio.js"></script>
     </body>
     <footer>
