adjusted paths in day_1.html

--- a/days/day_1.html
+++ b/days/day_1.html
@@ -6,9 +6,9 @@
         <title>
             1. Dia | Aprender Ingles 
         </title>
-        <link href="../../styles.css"" rel="stylesheet"/> <!--verlinkt den css file-->
+        <link href="../styles.css"" rel="stylesheet"/> <!--verlinkt den css file-->
         <div class="topnav">
-            <a class="active" href="../../home.html">Inicio</a>
+            <a class="active" href="../home.html">Inicio</a>
         </div>
     </head>
     <body>
@@ -86,8 +86,8 @@
             </tr>
          </table>
          <p>¡vamos Valeria!</p>
-         <img src="../../photos/photo_dia_1.png" onmousedown="playSound('annoying_peter.mp3')">
-         <script type="text/javascript" src="../../audio.js"></script>
+         <img src="../photos/photo_dia_1.png" onmousedown="playSound('annoying_peter.mp3')">
+         <script type="text/javascript" src="../audio.js"></script>
     </body>
     <footer>
         <hr>
