--- a/days/day_1.html
+++ b/days/day_1.html
@@ -6,7 +6,7 @@
         <title>
             1. Dia | Aprender Ingles 
         </title>
-        <link href="../styles.css"" rel="stylesheet"/> <!--verlinkt den css file-->
+        <link href="../styles.css" rel="stylesheet"/> <!--verlinkt den css file-->
         <div class="topnav">
             <a class="active" href="../home.html">Inicio</a>
         </div>
@@ -16,9 +16,9 @@
         <h1>1. Day</h1>
          <table>
             <tr>
-                <th class="header_row">espanol</th>
+                <th class="header_row">español</th>
                 <th class="header_row">ingles</th>
-                <th class="header_row">audio</th>
+                <th class="header_row">pronunciacion</th>
             </tr>
             <tr>
                 <th>poner</th>
