--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
         </div>
     </head>
     <body>
+        <a href="days/day_2.html" class="choose_day">2. day - 17.08.2023</a>
         <a href="days/day_1.html" class="choose_day">1. day - 16.08.2023</a>
     </body>
 </html>
