Fixing save of day3

--- a/days/day_3.html
+++ b/days/day_3.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!--Anscheinend braucht man das, damit es mit Handys Funktioniert-->
         <title>
-            . Dia | Aprender Ingles 
+            3. Dia | Aprender Ingles 
         </title>
         <link href="../styles.css" rel="stylesheet"/> <!--verlinkt den css file-->
         <div class="topnav">
@@ -13,7 +13,7 @@
     </head>
     <body>
         
-        <h1>. Day</h1>
+        <h1>3. Day</h1>
          <table>
             <tr>
                 <th class="header_row">español</th>
@@ -21,72 +21,78 @@
                 <th class="header_row">pronunciacion</th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>bueno</th>
+                <th>good</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/go/good_en_us_1.mp3')"></button>
                 </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>malo</th>
+                <th>bad</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('../missing_audio/bad.mp3')"></button>
                 </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>hermoso/a</th>
+                <th>beautiful</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/be/beautiful_en_us_1.mp3')"></button>
                 </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>feo/a</th>
+                <th>ugly</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/ug/ugly_en_us_1.mp3')"></button>
                 </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>feliz</th>
+                <th>happy</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/ha/happy_en_us_1.mp3')"></button>
                 </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>triste</th>
+                <th>sad</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('../missing_audio/sad.mp3')"></button>
                 </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>grande</th>
+                <th>big</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('../missing_audio/big.mp3')"></button>
                 </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>pequeño/a</th>
+                <th>small</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('')"></button>
+                    <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/sm/small_en_us_1.mp3')"></button>
                 </th>   
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>viejo/a</th>
+                <th>old</th>
+                <th>
+                    <button class='playbutton' onmousedown="playSound('../missing_audio/old.mp3')"></button>
+                </th>
             </tr>
             <tr>
-                <th></th>
-                <th></th>
+                <th>joven</th>
+                <th>young</th>
+                <th>
+                    <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/yo/young_en_us_1.mp3')"></button>
+                </th>
             </tr>
          </table>
          <p>¡vamos Valeria!</p>
-         <img src="../photos/photo_dia_1.png" onmousedown="playSound('annoying_peter.mp3')">
+         <img src="../photos/photo_dia_1.png" onmousedown="playSound('../peter_audio/annoying_peter.mp3')">
          <script type="text/javascript" src="../audio.js"></script>
     </body>
     <footer>
