added day3 in home

--- a/days/day_3.html
+++ b/days/day_3.html
@@ -97,7 +97,7 @@
     </body>
     <footer>
         <hr>
-        <p class="bottom_date"></p>
+        <p class="bottom_date">18.08.2023</p>
     </footer>
 </html>
 
