add day 4, add missing soundfile, extend day 4 on homescreen

--- a/days/template.html
+++ b/days/template.html
@@ -79,10 +79,16 @@
             <tr>
                 <th></th>
                 <th></th>
+                <th>
+                    <button class='playbutton' onmousedown="playSound('')"></button>
+                </th>   
             </tr>
             <tr>
                 <th></th>
                 <th></th>
+                <th>
+                    <button class='playbutton' onmousedown="playSound('')"></button>
+                </th>   
             </tr>
          </table>
          <p>¡vamos Valeria!</p>
