--- a/home.html
+++ b/home.html
@@ -12,6 +12,8 @@
         </div>
     </head>
     <body>
+        <a href="days/day_4.html" class="choose_day">4. day - 19.08.2023</a>
+        <br>
         <a href="days/day_3.html" class="choose_day">3. day - 18.08.2023</a>
         <br>
         <a href="days/day_2.html" class="choose_day">2. day - 17.08.2023</a>
