--- a/days/day_4.html
+++ b/days/day_4.html
@@ -35,8 +35,8 @@
                 </th>
             </tr>
             <tr>
-                <th>hacer</th>
-                <th>to do</th>
+                <th>leer</th>
+                <th>to read</th>
                 <th>
                     <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/ha/hacer_en_us_1.mp3')"></button>
                 </th>
@@ -50,9 +50,10 @@
             </tr>
             <tr>
                 <th>hacer</th>
-                <th>to make</th>
+                <th>to make / <br> to do</th>
                 <th>
                     <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/ma/make_en_us_1.mp3')"></button>
+                    <button class='playbutton' onmousedown="playSound('../missing_audio/do.mp3')"></button>
                 </th>
             </tr>
             <tr>
