add day 5 html and to home, add new audio files

--- a/days/day_4.html
+++ b/days/day_4.html
@@ -38,7 +38,7 @@
                 <th>leer</th>
                 <th>to read</th>
                 <th>
-                    <button class='playbutton' onmousedown="playSound('https://www.gstatic.com/dictionary/static/pronunciation/2022-03-02/audio/ha/hacer_en_us_1.mp3')"></button>
+                    <button class='playbutton' onmousedown="playSound('../missing_audio/read.mp3')"></button>
                 </th>
             </tr>
             <tr>
