Update day_5.html with mopsy picture / fix day 5 headliner

--- a/days/day_5.html
+++ b/days/day_5.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!--Anscheinend braucht man das, damit es mit Handys Funktioniert-->
         <title>
-            6. Dia | Aprender Ingles 
+            5. Dia | Aprender Ingles 
         </title>
         <link href="../styles.css" rel="stylesheet"/> <!--verlinkt den css file-->
         <div class="topnav">
@@ -13,7 +13,7 @@
     </head>
     <body>
         
-        <h1>6. Day</h1>
+        <h1>5. Day</h1>
          <table>
             <tr>
                 <th class="header_row">español</th>
@@ -92,7 +92,7 @@
             </tr>
          </table>
          <p>¡vamos Valeria!</p>
-         <img src="../photos/disappointed_peter.png" onmousedown="playSound('../peter_audio/learn_english_for_school.mp3')">
+         <img src="../photos/Mopsy.png" onmousedown="playSound('../peter_audio/learn_english_for_school.mp3')">
          <script type="text/javascript" src="../audio.js"></script>
     </body>
     <footer>
