--- a/home.html
+++ b/home.html
@@ -12,6 +12,8 @@
         </div>
     </head>
     <body>
+        <a href="days/day_6.html" class="choose_day">6. day - 20.08.2023</a>
+        <br>
         <a href="days/day_5.html" class="choose_day">5. day - 20.08.2023</a>
         <br>
         <a href="days/day_4.html" class="choose_day">4. day - 19.08.2023</a>
